# app/Http/Controllers/AuthController.php
@@ -6,14 +6,25 @@ use Illuminate\Http\Request;
 
 class AuthController extends Controller
 {
-    /**
-     * @OA\Post(
-     *     path="/auth/login",
-     *     summary="Provides a JWT token by email and password credentials",
-     *     tags={"Auth"},
-     *     @OA\Response(response=200,description="Logged in")
-     * )
-     */
+/**
+ * @OA\Post(
+ *     path="/auth/login",
+ *     summary="Provides a JWT token by email and password credentials",
+ *     tags={"Auth"},
+ *     @OA\RequestBody(
+ *         @OA\JsonContent(
+ *             allOf = {
+ *                 @OA\Schema(ref="#/components/schemas/LoginRequest")
+ *             }
+ *         )
+ *     ),
+ *     @OA\Response(response=200,description="Logged in")
+ *     )
+ * )
+ * @param LoginRequest $request
+ * @return JsonResponse
+ *
+ */
     public function login()
     {
         $credentials = request(['email', 'password']);
